# YoungDale

./: .gitignore  Modelfile  _Users_dalelefebvre_yd_models_command-r7b_sensitivities.json  pyproject.toml  requirements-youngdale.txt  requirements.txt  yd_restager.py
YoungDaleCorpus/: .gitattributes  Manifest.md  schema.yaml
YoungDaleCorpus/00_Index/: Categories.md  README.md  inbox.md  index.md  tree.md
YoungDaleCorpus/01_Preferences/: README.md  architecture_overview.md  cli_structure.md  editor.md  embedding_config.md  evaluator_hints.md  index.md  models.md  templates_registry.md
YoungDaleCorpus/02_Shouldness_Engine/: README.md  index.md
YoungDaleCorpus/03_Businesses/: README.md  index.md
YoungDaleCorpus/04_Assets/: README.md  index.md
YoungDaleCorpus/05_Rules/: README.md  index.md
YoungDaleCorpus/06_Philosophy/: README.md  index.md
YoungDaleCorpus/07_Poetry/: README.md  index.md
YoungDaleCorpus/08_Culinary/: README.md  index.md
YoungDaleCorpus/09_Workflows/: README.md  index.md
YoungDaleCorpus/10_Evaluators/: README.md  index.md
YoungDaleCorpus/11_Artifacts/: README.md  index.md
YoungDaleCorpus/12_Events/: README.md  index.md
YoungDaleCorpus/13_Patentability/: README.md  index.md
YoungDaleCorpus/14_Hardware/: README.md  index.md
YoungDaleCorpus/15_Software/: README.md  index.md
YoungDaleCorpus/16_YoungDale/: README.md  index.md
YoungDaleCorpus/17_Goals/: README.md  index.md
YoungDaleCorpus/17_Influences/: README.md  index.md
YoungDaleCorpus/18_Calls/: README.md  index.md
scripts/: setup_air.sh
voice/shards/: dog-intent.md  (+5 more)
(+189 files in other folders)
