[project]
name = "youngdale"
version = "0.1.0"
description = "YoungDale ingestion + orchestration"
authors = [
    {name = "Dale"}
]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "huggingface-hub (>=1.0.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
